Fixed let's encrypt problem with new apps

--- a/starter-files/nginx/application.conf
+++ b/starter-files/nginx/application.conf
@@ -17,9 +17,9 @@ server {
         
         server_name {application domain};
 
-	ssl_certificate /etc/letsencrypt/live/{application domain}/fullchain.pem;
-	ssl_certificate_key /etc/letsencrypt/live/{application domain}/privkey.pem;
-	ssl_trusted_certificate /etc/letsencrypt/live/{application domain}/fullchain.pem;
+	#ssl_certificate /etc/letsencrypt/live/{application domain}/fullchain.pem;
+	#ssl_certificate_key /etc/letsencrypt/live/{application domain}/privkey.pem;
+	#ssl_trusted_certificate /etc/letsencrypt/live/{application domain}/fullchain.pem;
 
 	include /etc/nginx/snippets/ssl.conf;
 
