Fixed log paths

--- a/starter-files/nginx/application.conf
+++ b/starter-files/nginx/application.conf
@@ -23,8 +23,8 @@ server {
 
 	include /etc/nginx/snippets/ssl.conf;
 
-        access_log /var/log/nginx/$server_name-access.log;
-        error_log /var/log/nginx/$server_name-error.log;
+        access_log /var/log/nginx/{application domain}-access.log;
+        error_log /var/log/nginx/{application domain}-error.log;
 
         location / {
                 proxy_pass http://localhost:{application port};
