--- a/starter-files/nginx/default.conf
+++ b/starter-files/nginx/default.conf
@@ -4,8 +4,8 @@ server {
 
     server_name {your hostname};
 
-    access_log /var/log/nginx/$server_name.access.log;
-    error_log /var/log/nginx/$server_name.error.log;
+    access_log /var/log/nginx/{your hostname}.access.log;
+    error_log /var/log/nginx/{your hostname}.error.log;
 
     location / {
         root   /var/www/default;
