Big update to use Ubuntu 18 Bionic and fix known issues

--- a/starter-files/nginx/default.conf
+++ b/starter-files/nginx/default.conf
@@ -7,6 +7,12 @@ server {
     access_log /var/log/nginx/{your hostname}.access.log;
     error_log /var/log/nginx/{your hostname}.error.log;
 
+    # redirect server error pages to the static page /50x.html
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
+    }
+    
     location / {
         root   /var/www/default;
         index  index.html index.htm;
