--- a/starter-files/nginx/boilerplate.conf
+++ b/starter-files/nginx/boilerplate.conf
@@ -4,8 +4,8 @@ server {
         
         server_name boilerplate.{your domain};
 
-        access_log /var/log/nginx/{your domain}-access.log;
-        error_log /var/log/nginx/{your domain}-error.log;
+        access_log /var/log/nginx/boilerplate.{your domain}-access.log;
+        error_log /var/log/nginx/boilerplate.{your domain}-error.log;
 
         location / {
                 proxy_pass http://localhost:7000;
